# Cadance

./: .claude.json  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile_macOS  PROGRESS.md  README.md  TASK_QUEUE.md  cad_sync.md  claude-container.sh  communication.md  entrypoint.sh  package-lock.json  package.json  prposal.md  pyproject.toml  pyproject.toml.bak  uv.lock.bak
.github/llm-pr-reviewer/: .gitignore  jest.config.js  package-lock.json  package.json  test-openai.ts
.github/workflows/: eda-verify.yml  kicad-verify.yml  lint.yml  test.yml  (+3 more)
.streamlit/: machine_id_v4
bench/: README.md  SCORING.md  _render_subproc.py  eval.py  eval_qa.py  eval_qa_code.py  eval_qa_img.py  fetch_data.py  post_3model_mosaic.py  render_eval_codes.py  results.py  run_2models_img2cq.sh  run_3models_200.sh  run_kimi_5col.sh  run_qa_8parallel.sh  run_qa_kimi_k26.sh  run_render_post.sh  sampling.py  smoke_upload.py  upload_external.py
data/: auto_refine_demo.json  demo_mech_integration.json
docs/: ISO_FAMILY_COVERAGE.md  ISO_STANDARDS_REFERENCE.md  NIPS_DATASET_BENCH_REVIEW_AND_PLAN.md  iso_tables_scratch.py
paper/: comments.md  draft_cvpr2026_nexd.md  draft_intro.md  draft_intro_v2.md.bak  draft_tables.md  fig5_cases.json  figures.md  make_fig1.py  make_fig2.py  make_fig3.py  make_fig4.py  make_fig5.py  skill.md  target_workshop.md
scripts/: README.md  analyze_metric_impact.py  bench_or_50.sh  bench_or_7x3.sh  benchmark_gt_execution.py  build_cad_bench_50.py  generate_bracket_disconnection_test.py  generate_dfm_test_cases.py  generate_evaluation_steps.py  preview.sh  qwen2_5_vl_smoke.py  run_confidence_evaluation.py  run_coverage_evaluation.py  run_dag_pipeline.py  run_dfm_evaluation.py  run_evaluation.py  run_resume_from_ops_loop.py  setup_nlopt_compat.py  temperature_experiment.py  test-all.sh  test_seed_determinism.py  test_vl_cold_start.py  trace_determinism.py
tests/: __init__.py  conftest.py  test_ambiguity_confidence.py  test_ambiguity_detection.py  test_bench_pipeline.py  test_cli.py  test_cli_coverage.py  test_conflict_explainer.py  test_constraint_extractor.py  test_contract_compiler.py  test_contract_extraction.py  test_contract_gaps.py  test_contract_sat.py  test_family_roundtrip.py  test_feedback.py  test_grs_refinement.py  test_hypergraph_engine_coverage.py  test_ieee830.py  test_llm_coverage.py  test_orchestrator_coverage.py  test_pr27_fixes.py  test_symbol_table.py  test_syntactic_schema.py  test_tier3_syntactic.py  test_tier4_semantic.py  test_tolerance_parser.py  test_unit_converter.py  test_z3_solver.py
(+1295 files in other folders)
